--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav {
   width: 200px;
   height: 100vh;
   z-index: 100;
-  /* transform: translateX(-100%); */
+  transform: translateX(-100%);
 }
 
 nav .logo {
@@ -53,4 +53,13 @@ nav ul li {
 
 nav ul li:first-of-type {
   border-top: 2px solid rgba(200,200,200, 0.1);
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
 }
