--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ button:focus {
 
 .modal-container {
   background-color: rgba(0, 0, 0, 0.6);
-  /*display: none;*/
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -169,3 +169,15 @@ button:focus {
   margin-bottom: 5px;
 }
 
+.modal-form .form-input {
+  padding: 8px;
+  width: 100%;
+}
+
+.closed-btn {
+  background: transparent;
+  font-size: 25px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
