--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ nav .logo img {
 }
 
 nav ul {
+  text-align: center;
   padding: 0;
   list-style-type: none;
   margin: 0;
@@ -60,12 +61,14 @@ nav ul li {
 
 
 nav ul li a {
+  font-size: 20px;
   color: #fff;
   text-decoration: none;
 }
 
 nav ul li a:hover {
-  text-decoration: underline;
+  border-bottom: 2px solid;
+  padding-bottom: 2px;
 }
 /* End Navigation */
 
